make sure the box-shadow shows up on iOS

--- a/src/main/resources/scss/common/components/_grid-view.scss
+++ b/src/main/resources/scss/common/components/_grid-view.scss
@@ -67,10 +67,12 @@
 	width: 180px;
 	position: relative;
 	overflow: visible;
+	box-shadow: 0 0 0.5rem 0 rgba(0,0,0,0.8);
+	border-radius: 1px;//iOS won't render the shadow w/o this :/
 
 	& > a {
 		@extend %content-card;
-		box-shadow: 0 0 5px 0 rgba(0,0,0,0.8);
+
 
 		&::after {
 			content: none;
@@ -108,6 +110,7 @@
 		@extend %outline;
 
 		&.sections {
+			border-top: 1px solid $border-grey;
 			background: #fff;
 			li {
 				// padding-bottom: 0;
